--- a/src/main/resources/com/vertex/vos/DispatchPlanForm.fxml
+++ b/src/main/resources/com/vertex/vos/DispatchPlanForm.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="600.0" prefWidth="800.0" style="-fx-padding: 5;" stylesheets="@assets/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.DispatchPlanFormController">
+<BorderPane prefHeight="600.0" prefWidth="800.0" style="-fx-padding: 5;" stylesheets="@assets/style.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.DispatchPlanFormController">
     <bottom>
 
         <ButtonBar fx:id="buttonBar" BorderPane.alignment="CENTER">
@@ -87,8 +87,8 @@
                <children>
                   <VBox>
                      <children>
-                        <Label text="Vehicle" />
-                        <TextField fx:id="vehicleField" />
+                        <Label text="Driver Name" />
+                        <TextField fx:id="driverField"/>
                      </children>
                   </VBox>
                   <VBox layoutX="10.0" layoutY="10.0">
