--- a/src/main/resources/com/vertex/vos/InternalOperationsContent.fxml
+++ b/src/main/resources/com/vertex/vos/InternalOperationsContent.fxml
@@ -11,7 +11,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.paint.Color?>
 
-
 <BorderPane style="-fx-padding: 10;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.InternalOperationsContentController">
    <center>
       <VBox spacing="10.0">
@@ -42,30 +41,30 @@
                                 </DropShadow>
                             </effect>
                         </VBox>
-                        <VBox fx:id="openSalesInvoice" alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
-                            <children>
-                                <HBox alignment="CENTER" spacing="10.0">
-                                    <children>
-                                        <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-                                            <image>
-                                                <Image url="@assets/icons/Invoice.png" />
-                                            </image>
-                                        </ImageView>
-                                        <Label style="-fx-font-size: 17px; -fx-text-fill: linear-gradient(to right, #155d99, #5A90CF);" styleClass="text-title-logo" stylesheets="@assets/global.css" text="Sales Invoice" wrapText="true" />
-                                    </children>
-                                </HBox>
-                            </children>
-                            <padding>
-                                <Insets bottom="30.0" left="15.0" right="15.0" top="30.0" />
-                            </padding>
-                            <effect>
-                                <DropShadow>
-                                    <color>
-                                        <Color opacity="0.5" />
-                                    </color>
-                                </DropShadow>
-                            </effect>
-                        </VBox>
+                  <VBox fx:id="openConsolidation" alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
+                     <children>
+                        <HBox alignment="CENTER" spacing="10.0">
+                           <children>
+                              <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@assets/icons/Trolley.png" />
+                                 </image>
+                              </ImageView>
+                              <Label style="-fx-font-size: 17px; -fx-text-fill: linear-gradient(to right, #155d99, #5A90CF);" styleClass="text-title-logo" stylesheets="@assets/global.css" text="Consolidation" wrapText="true" />
+                           </children>
+                        </HBox>
+                     </children>
+                     <padding>
+                        <Insets bottom="30.0" left="15.0" right="15.0" top="30.0" />
+                     </padding>
+                     <effect>
+                        <DropShadow>
+                           <color>
+                              <Color opacity="0.5" />
+                           </color>
+                        </DropShadow>
+                     </effect>
+                  </VBox>
                         <VBox fx:id="openPickList" alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
                             <children>
                                 <HBox alignment="CENTER" prefWidth="164.0" spacing="10.0">
@@ -114,16 +113,44 @@
                                 </DropShadow>
                             </effect>
                         </VBox>
-                  <VBox fx:id="openConsolidation" alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
+                        <VBox fx:id="openSalesInvoice" alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
+                            <children>
+                                <HBox alignment="CENTER" spacing="10.0">
+                                    <children>
+                                        <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                                            <image>
+                                                <Image url="@assets/icons/Invoice.png" />
+                                            </image>
+                                        </ImageView>
+                                        <Label style="-fx-font-size: 17px; -fx-text-fill: linear-gradient(to right, #155d99, #5A90CF);" styleClass="text-title-logo" stylesheets="@assets/global.css" text="Sales Invoice" wrapText="true" />
+                                    </children>
+                                </HBox>
+                            </children>
+                            <padding>
+                                <Insets bottom="30.0" left="15.0" right="15.0" top="30.0" />
+                            </padding>
+                            <effect>
+                                <DropShadow>
+                                    <color>
+                                        <Color opacity="0.5" />
+                                    </color>
+                                </DropShadow>
+                            </effect>
+                        </VBox>
+               </children>
+            </TilePane>
+            <TilePane fx:id="interOps2TilePane" hgap="10.0" vgap="10.0">
+               <children>
+                  <VBox fx:id="openPurchaseOrder" alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
                      <children>
                         <HBox alignment="CENTER" spacing="10.0">
                            <children>
                               <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@assets/icons/Trolley.png" />
+                                    <Image url="@assets/icons/Create%20Order.png" />
                                  </image>
                               </ImageView>
-                              <Label style="-fx-font-size: 17px; -fx-text-fill: linear-gradient(to right, #155d99, #5A90CF);" styleClass="text-title-logo" stylesheets="@assets/global.css" text="Consolidation" wrapText="true" />
+                              <Label style="-fx-font-size: 17px; -fx-text-fill: linear-gradient(to right, #155d99, #5A90CF);" styleClass="text-title-logo" stylesheets="@assets/global.css" text="Purchase Order" wrapText="true" />
                            </children>
                         </HBox>
                      </children>
@@ -138,10 +165,6 @@
                         </DropShadow>
                      </effect>
                   </VBox>
-               </children>
-            </TilePane>
-            <TilePane fx:id="interOps2TilePane" hgap="10.0" vgap="10.0">
-               <children>
                         <VBox fx:id="openReceiving" alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
                             <children>
                                 <HBox alignment="CENTER" prefWidth="164.0" spacing="10.0">
@@ -196,7 +219,7 @@
                            <children>
                               <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@assets/icons/Create%20Order.png" />
+                                    <Image url="@assets/icons/Graph%20Report.png" />
                                  </image>
                               </ImageView>
                               <Label style="-fx-font-size: 17px; -fx-text-fill: linear-gradient(to right, #155d99, #5A90CF);" styleClass="text-title-logo" stylesheets="@assets/global.css" text="PO Summary" wrapText="true" />
@@ -214,35 +237,11 @@
                         </DropShadow>
                      </effect>
                   </VBox>
-                  <VBox fx:id="openPurchaseOrder" alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
-                     <children>
-                        <HBox alignment="CENTER" spacing="10.0">
-                           <children>
-                              <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@assets/icons/Graph%20Report.png" />
-                                 </image>
-                              </ImageView>
-                              <Label style="-fx-font-size: 17px; -fx-text-fill: linear-gradient(to right, #155d99, #5A90CF);" styleClass="text-title-logo" stylesheets="@assets/global.css" text="Purchase Order" wrapText="true" />
-                           </children>
-                        </HBox>
-                     </children>
-                     <padding>
-                        <Insets bottom="30.0" left="15.0" right="15.0" top="30.0" />
-                     </padding>
-                     <effect>
-                        <DropShadow>
-                           <color>
-                              <Color opacity="0.5" />
-                           </color>
-                        </DropShadow>
-                     </effect>
-                  </VBox>
                </children>
             </TilePane>
-            <TilePane fx:id="interOps3TilePane" hgap="10.0" prefHeight="200.0" prefWidth="200.0" vgap="10.0">
+            <TilePane fx:id="interOps3TilePane" hgap="10.0" vgap="10.0">
                <children>
-                        <VBox fx:id="openStockTransfer" alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
+                        <VBox fx:id="openStockTransfer" alignment="CENTER_LEFT" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
                             <children>
                                 <HBox alignment="CENTER" spacing="10.0">
                                     <children>
@@ -266,7 +265,7 @@
                                 </DropShadow>
                             </effect>
                         </VBox>
-                  <VBox fx:id="openSalesEncodingTemp" alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
+                  <VBox fx:id="openSalesEncodingTemp" alignment="CENTER_LEFT" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
                      <children>
                         <HBox alignment="CENTER" spacing="10.0">
                            <children>
@@ -290,7 +289,7 @@
                         </DropShadow>
                      </effect>
                   </VBox>
-                  <VBox fx:id="openBadStockTransfer" alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
+                  <VBox fx:id="openBadStockTransfer" alignment="CENTER_LEFT" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
                      <children>
                         <HBox alignment="CENTER" spacing="10.0">
                            <children>
@@ -314,7 +313,7 @@
                         </DropShadow>
                      </effect>
                   </VBox>
-                  <VBox fx:id="openPhysicalInventory" alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
+                  <VBox fx:id="openPhysicalInventory" alignment="CENTER_LEFT" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
                      <children>
                         <HBox alignment="CENTER" spacing="10.0">
                            <children>
@@ -338,7 +337,7 @@
                         </DropShadow>
                      </effect>
                   </VBox>
-                  <VBox fx:id="openRafModule" alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
+                  <VBox fx:id="openRafModule" alignment="CENTER_LEFT" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
                      <children>
                         <HBox alignment="CENTER" spacing="10.0">
                            <children>
@@ -362,7 +361,7 @@
                         </DropShadow>
                      </effect>
                   </VBox>
-                  <VBox fx:id="openOffsettingModule" alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
+                  <VBox fx:id="openOffsettingModule" alignment="CENTER_LEFT" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
                      <children>
                         <HBox alignment="CENTER" spacing="10.0">
                            <children>
@@ -386,7 +385,7 @@
                         </DropShadow>
                      </effect>
                   </VBox>
-                        <VBox fx:id="openInventoryControls" alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
+                        <VBox fx:id="openInventoryControls" alignment="CENTER_LEFT" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
                             <children>
                                 <HBox alignment="CENTER" spacing="10.0">
                                     <children>
@@ -410,7 +409,7 @@
                                 </DropShadow>
                             </effect>
                         </VBox>
-                        <VBox fx:id="openInventoryLedger" alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
+                        <VBox fx:id="openInventoryLedger" alignment="CENTER_LEFT" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
                             <children>
                                 <HBox alignment="CENTER" spacing="10.0">
                                     <children>
