--- a/src/main/resources/com/vertex/vos/LogisticNavigation.fxml
+++ b/src/main/resources/com/vertex/vos/LogisticNavigation.fxml
@@ -11,34 +11,10 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.paint.Color?>
 
-<BorderPane style="-fx-padding: 15;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.LogisticNavigationController">
+<BorderPane style="-fx-padding: 15;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.LogisticNavigationController">
    <center>
       <TilePane fx:id="tilePane" hgap="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" stylesheets="@assets/style.css" tileAlignment="TOP_LEFT" vgap="10.0" BorderPane.alignment="TOP_LEFT">
          <children>
-            <VBox fx:id="openDispatchPlan" alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" maxWidth="200.0" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
-               <children>
-                  <HBox alignment="CENTER" spacing="10.0">
-                     <children>
-                        <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@assets/icons/Summary List.png" />
-                           </image>
-                        </ImageView>
-                        <Label style="-fx-font-size: 17px; -fx-text-fill: linear-gradient(to right, #155d99, #5A90CF);" styleClass="text-title-logo" stylesheets="@assets/global.css" text="Dispatch Plan" wrapText="true" />
-                     </children>
-                  </HBox>
-               </children>
-               <padding>
-                  <Insets bottom="30.0" left="15.0" right="15.0" top="30.0" />
-               </padding>
-               <effect>
-                  <DropShadow>
-                     <color>
-                        <Color opacity="0.5" />
-                     </color>
-                  </DropShadow>
-               </effect>
-            </VBox>
              <VBox fx:id="openTripSummary" alignment="CENTER_LEFT" maxWidth="200.0" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
                  <children>
                      <HBox alignment="CENTER" spacing="10.0">
@@ -63,6 +39,30 @@
                      </DropShadow>
                  </effect>
              </VBox>
+            <VBox fx:id="openPendingDeliveries" alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" maxWidth="200.0" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
+               <children>
+                  <HBox alignment="CENTER" spacing="10.0">
+                     <children>
+                        <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@assets/icons/Delivery.png" />
+                           </image>
+                        </ImageView>
+                        <Label style="-fx-font-size: 17px; -fx-text-fill: linear-gradient(to right, #155d99, #5A90CF);" styleClass="text-title-logo" stylesheets="@assets/global.css" text="Pending Deliveries" wrapText="true" />
+                     </children>
+                  </HBox>
+               </children>
+               <padding>
+                  <Insets bottom="30.0" left="15.0" right="15.0" top="30.0" />
+               </padding>
+               <effect>
+                  <DropShadow>
+                     <color>
+                        <Color opacity="0.5" />
+                     </color>
+                  </DropShadow>
+               </effect>
+            </VBox>
       
          </children>
       </TilePane>
