--- a/src/main/resources/com/vertex/vos/receivingIOperations.fxml
+++ b/src/main/resources/com/vertex/vos/receivingIOperations.fxml
@@ -4,6 +4,7 @@
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -11,15 +12,50 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-
 <ScrollPane fitToHeight="true" fitToWidth="true" pannable="true" styleClass="contentBackground" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.ReceivingIOperationsController">
    <content>
-      <VBox styleClass="contentBackground">
-         <children>
-            <VBox fx:id="receivingBox">
+      <BorderPane>
+         <center>
+            <TabPane fx:id="invoiceTabs" prefHeight="600.0" tabClosingPolicy="UNAVAILABLE" />
+         </center>
+         <bottom>
+            <BorderPane BorderPane.alignment="CENTER">
+               <bottom>
+                  <ButtonBar BorderPane.alignment="CENTER">
+                     <buttons>
+                        <Button fx:id="postButton" disable="true" mnemonicParsing="false" text="Post" />
+                        <Button fx:id="confirmButton" minWidth="250.0" mnemonicParsing="false" text="Confirm Receiving">
+                           <styleClass>
+                              <String fx:value="button" />
+                              <String fx:value="text-input" />
+                           </styleClass>
+                        </Button>
+                     </buttons>
+                  </ButtonBar>
+               </bottom>
+               <right>
+                  <HBox fx:id="totalBox" alignment="CENTER_RIGHT" spacing="20.0" BorderPane.alignment="CENTER">
+                     <children>
+                        <VBox fx:id="totalBoxLabels" alignment="CENTER_RIGHT" spacing="5.0">
+                           <children>
+                              <Label fx:id="vatable" layoutX="13.0" layoutY="10.0" style="-fx-font-size: 14;" styleClass="sub-header" stylesheets="@assets/style.css" text="Vatable Sales" />
+                              <Label fx:id="vatZeroRated" layoutX="13.0" layoutY="10.0" style="-fx-font-size: 14;" styleClass="sub-header" stylesheets="@assets/style.css" text="Vat Zero-Rated Sales" />
+                              <Label fx:id="vatExempt" style="-fx-font-size: 14;" styleClass="sub-header" stylesheets="@assets/style.css" text="Vat Exempt Sales" />
+                              <Label fx:id="vat" style="-fx-font-size: 14;" styleClass="sub-header" stylesheets="@assets/style.css" text="Vat" />
+                              <Label fx:id="amountPayable" style="-fx-font-size: 14;" styleClass="sub-header" stylesheets="@assets/style.css" text="Total Amount Payable" />
+                           </children>
+                        </VBox>
+                     </children>
+                  </HBox>
+               </right>
+            </BorderPane>
+         </bottom>
+         <top>
+            <VBox fx:id="receivingBox" BorderPane.alignment="CENTER">
                <children>
                   <HBox spacing="10.0">
                      <children>
@@ -117,44 +153,8 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
             </VBox>
-            <TabPane fx:id="invoiceTabs" prefHeight="600.0" tabClosingPolicy="UNAVAILABLE" />
-            <VBox fx:id="footer">
-               <children>
-                  <HBox fx:id="totalBox" alignment="CENTER_RIGHT" spacing="20.0">
-                     <children>
-                        <VBox fx:id="totalBoxLabels" alignment="CENTER_RIGHT" spacing="5.0">
-                           <children>
-                              <Label fx:id="vatable" layoutX="13.0" layoutY="10.0" style="-fx-font-size: 14;" styleClass="sub-header" stylesheets="@assets/style.css" text="Vatable Sales" />
-                              <Label fx:id="vatZeroRated" layoutX="13.0" layoutY="10.0" style="-fx-font-size: 14;" styleClass="sub-header" stylesheets="@assets/style.css" text="Vat Zero-Rated Sales" />
-                              <Label fx:id="vatExempt" style="-fx-font-size: 14;" styleClass="sub-header" stylesheets="@assets/style.css" text="Vat Exempt Sales" />
-                              <Label fx:id="vat" style="-fx-font-size: 14;" styleClass="sub-header" stylesheets="@assets/style.css" text="Vat" />
-                              <Label fx:id="amountPayable" style="-fx-font-size: 14;" styleClass="sub-header" stylesheets="@assets/style.css" text="Total Amount Payable" />
-                           </children>
-                        </VBox>
-                     </children>
-                  </HBox>
-                  <VBox alignment="TOP_RIGHT">
-                     <children>
-                        <HBox alignment="CENTER_RIGHT" spacing="5.0">
-                           <children>
-                              <Button fx:id="postButton" disable="true" mnemonicParsing="false" text="Post" />
-                              <Button fx:id="confirmButton" minWidth="250.0" mnemonicParsing="false" text="Confirm Receiving">
-                                 <styleClass>
-                                    <String fx:value="button" />
-                                    <String fx:value="text-input" />
-                                 </styleClass>
-                              </Button>
-                           </children>
-                        </HBox>
-                     </children>
-                  </VBox>
-               </children>
-               <padding>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </padding>
-            </VBox>
-         </children>
-      </VBox>
+         </top>
+      </BorderPane>
    </content>
    <stylesheets>
       <URL value="@assets/global.css" />
